--- a/6. Diagramas de Flujo.md
+++ b/6. Diagramas de Flujo.md
@@ -53,11 +53,12 @@ Sus características fundamentales son:
  + No tienen líneas de flujo sin conectar.
  + El lenguaje es conciso y claro
  
-## Simbología
+## 👁‍🗨 Simbología
 
 ![flujo](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/flujo.png?raw=true)
 
 ![Inicio y Fin](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/iniciofin.png?raw=true)
+> ⚠ Tambien, el simbolo de elipse de **inicio y fin** se representa con un **rectangulo con bordes circulares**
 
 ![Entrada y salida](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/entradasalida.png?raw=true)
 
@@ -79,3 +80,11 @@ Sus características fundamentales son:
 
 ![Conetor otra pag](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/conectorotrapag.png?raw=true)
 
+![Impresion](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/impreso.png?raw=true)
+
+### Ejemplo
+
+![Ejemplo](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/ejemplo.png?raw=true)
+
+
+by Izzy 😁
