--- a/7. Estructuras de Control.md
+++ b/7. Estructuras de Control.md
@@ -48,7 +48,7 @@ imprimir en pantalla el otro mensaje pertinente. Traza líneas de flujo de datos
 se dirigen de los símbolos de salida a un conector.
 + Por último, une el conector con el símbolo de fin
 
-![]()
+![Condicional](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/es-condicional.png?raw=true)
 
 ### 2️⃣ una estructura selectiva múltiple
 
@@ -64,7 +64,7 @@ podría tomar la variable de salida del símbolo de decisión.
 algoritmo.
 + Por último, dirige a todos los flujos hacia el símbolo del fin.
 
-![]()
+![Multiple](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/es-multiple.png?raw=true)
 
 Usa estructuras condicionales cuando tu algoritmo requiera comprobar una condición para
 realizar ciertas instrucciones.
@@ -87,21 +87,23 @@ a un problema en un algoritmo. Sus componentes son:
 > 
 > Incremento. Indica el valor numérico que se le sumará a la expresión inicial tras completar el ciclo.
 
-![]()
+![Iterativo](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/es-iterativo.png?raw=true)
 
 + Mientras (while). Se emplea para ejecutar un bloque de instrucciones en un
 ciclo sin necesidad de establecer el número de veces que lo hará. Se
 compone por una expresión lógica, relacional o aritmética, que es evaluada
 en una condición.
 
-![]()
+![While](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/es-while.png?raw=true)
 
 + Hacer Mientras (do...while). Se usa cuando el problema a resolver requiere
 que se ejecute por lo menos una vez el ciclo. Se compone por una
 condicional cuya expresión se evalúa después de ejecutar el bloque de
 instrucciones. El ciclo finaliza cuando la condición se vuelve falsa.
 
-![]()
+![DoWhile](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/es-dowhile.png?raw=true)
 
 Usa las estructuras interactivas en las instrucciones del algoritmo que son repetitivas, así
 agilizarás el desarrollo del mismo.
+
+by Izzy 😁
